--- a/app/src/main/res/layout/fragment_order_send.xml
+++ b/app/src/main/res/layout/fragment_order_send.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="100dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:gravity="center"
@@ -72,8 +71,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="100dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:gravity="center"
@@ -85,7 +83,7 @@
             android:src="@mipmap/collect"/>
 
         <TextView
-           android:id="@+id/tv_addresses"
+            android:id="@+id/tv_addresses"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -138,8 +136,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.5"
+        android:layout_height="wrap_content"
         android:padding="10dp"
         android:orientation="horizontal">
 
@@ -175,9 +172,9 @@
 
                 <ImageView
                     android:id="@+id/img_open_option"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@mipmap/open"/>
             </LinearLayout>
 
         </LinearLayout>
@@ -211,32 +208,35 @@
 
                 <ImageView
                     android:id="@+id/img_minus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:src="@mipmap/minus"/>
 
                 <EditText
                     android:id="@+id/et_estimate_weight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:background="@null"
+                    android:gravity="center"
                     android:textColor="#111"
-                    android:textSize="16sp"
+                    android:textSize="24sp"
                     android:text="1"/>
 
                 <ImageView
                     android:id="@+id/img_add"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:src="@mipmap/add"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.5"
+        android:layout_height="wrap_content"
         android:padding="10dp"
         android:orientation="horizontal">
 
@@ -267,6 +267,11 @@
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:hint="0"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="    "/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -304,33 +309,38 @@
 
                 <ImageView
                     android:id="@+id/img_package_minus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:layout_width="30dp"
+                    android:layout_weight="1"
+                    android:layout_height="30dp"
+                    android:src="@mipmap/minus"/>
 
                 <EditText
                     android:id="@+id/et_package_amount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:background="@null"
                     android:textColor="#111"
-                    android:textSize="16sp"
+                    android:gravity="center"
+                    android:textSize="24sp"
                     android:text="1"/>
 
                 <ImageView
                     android:id="@+id/img_package_add"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:layout_width="30dp"
+                    android:layout_weight="1"
+                    android:layout_height="30dp"
+                    android:src="@mipmap/add"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="100dp"
+        android:background="@color/bg"
         android:gravity="center"
+        android:padding="20dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -338,16 +348,16 @@
             android:layout_height="wrap_content"
             android:gravity="center">
 
-        <CheckBox
-            android:id="@+id/cb_agree"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/checkbox_shape"/>
+            <CheckBox
+                android:id="@+id/cb_agree"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/checkbox_shape"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="我已同意并接受《寄件承诺》"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="我已同意并接受《寄件承诺》"/>
 
         </LinearLayout>
 
@@ -360,14 +370,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.8"
-        android:gravity="bottom">
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:background="@color/bg"
+        android:gravity="center">
 
         <Button
             android:id="@+id/btn_send_confirm"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:textSize="24sp"
             android:text="提交"/>
     </LinearLayout>
