--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".Activity.MainActivity">
 
-    <android.support.v4.view.ViewPager
+    <com.example.peng.express.Util.NoScrollViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -28,6 +28,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/img_home"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@mipmap/home_page" />
@@ -47,6 +48,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/img_send"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@mipmap/send_package" />
@@ -66,6 +68,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/img_package"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@mipmap/express" />
@@ -85,6 +88,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/img_myself"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@mipmap/main"/>
