--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="textSize">16sp</dimen>
+    <dimen name="mark">30dp</dimen>
+    <dimen name="main_height">70dp</dimen>
 </resources>
