--- a/app/src/main/res/layout/activity_direction.xml
+++ b/app/src/main/res/layout/activity_direction.xml
@@ -27,7 +27,7 @@
             android:text="收件人地址"
             android:textSize="24sp"/>
     </RelativeLayout>
-
+//text1
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
