--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:background="#ffffff"
         android:gravity="center">
 
@@ -104,15 +105,15 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:padding="10dp"
             android:layout_weight="1"
-            android:src="@mipmap/uncollected_package"
-            />
+            android:src="@mipmap/uncollected_package" />
 
         <TextView
             android:id="@+id/tv_uncollected_package"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:layout_weight="1"
@@ -125,15 +126,16 @@
             />
 
         <ImageView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:padding="10dp"
             android:src="@mipmap/finish_send"
             android:layout_weight="1"
             />
 
         <TextView
             android:id="@+id/tv_finish_send"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:layout_weight="1"
@@ -143,17 +145,18 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="35dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:background="@drawable/shape_btn_login"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/img_scan"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:id="@+id/img_search"
+            android:layout_width="@dimen/search_icon"
+            android:layout_height="@dimen/search_icon"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="center"
             android:src="@mipmap/search" />
 
         <EditText
@@ -165,10 +168,11 @@
             android:textCursorDrawable="@drawable/cursor_shape" />
 
         <ImageView
-            android:id="@+id/img_search"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:id="@+id/img_scan"
+            android:layout_width="@dimen/search_icon"
+            android:layout_height="@dimen/search_icon"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="center"
             android:src="@mipmap/scan" />
     </LinearLayout>
 
@@ -176,7 +180,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp">
-
     </ListView>
 
 
