--- a/app/src/main/res/layout/fragment_myself.xml
+++ b/app/src/main/res/layout/fragment_myself.xml
@@ -43,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/main_height"
                 android:background="@color/colorGrey"
-                android:padding="20dp">
+                android:paddingLeft="@dimen/padding_left">
 
                 <ImageView
                     android:layout_width="@dimen/mark"
@@ -64,7 +64,7 @@
                 android:id="@+id/line_sign_in"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/main_height"
-                android:padding="20dp"
+                android:paddingLeft="@dimen/padding_left"
                 android:background="@color/colorGrey">
 
                 <ImageView
@@ -85,7 +85,7 @@
                 android:id="@+id/line_integral"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/main_height"
-                android:padding="20dp"
+                android:paddingLeft="@dimen/padding_left"
                 android:background="@color/colorGrey">
 
                 <ImageView
@@ -107,7 +107,7 @@
                 android:id="@+id/line_setting"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/main_height"
-                android:padding="20dp"
+                android:paddingLeft="@dimen/padding_left"
                 android:background="@color/colorGrey">
 
                 <ImageView
@@ -128,7 +128,7 @@
                 android:id="@+id/sender"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/main_height"
-                android:padding="20dp"
+                android:paddingLeft="@dimen/padding_left"
                 android:background="@color/colorGrey">
 
                 <ImageView
@@ -149,7 +149,7 @@
                 android:id="@+id/line_about"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/main_height"
-                android:padding="20dp"
+                android:paddingLeft="@dimen/padding_left"
                 android:background="@color/colorGrey">
 
                 <ImageView
