--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="textSize">16sp</dimen>
+    <dimen name="main_height">60dp</dimen>
+    <dimen name="padding_left">20dp</dimen>
+    <dimen name="search_icon">30dp</dimen>
     <dimen name="mark">30dp</dimen>
-    <dimen name="main_height">70dp</dimen>
     <dimen name="dots_height">30dp</dimen>
     <dimen name="dots_margin_bottom">20dp</dimen>
 </resources>
