--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -177,6 +177,7 @@
     </LinearLayout>
 
     <ListView
+        android:id="@+id/main_page_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp">
