--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/mainPage"
     tools:context=".Activity.MainActivity">
 
     <com.example.peng.express.Util.NoScrollViewPager
@@ -31,12 +32,14 @@
                 android:id="@+id/img_home"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:padding="5dp"
+                android:padding="10dp"
                 android:src="@mipmap/home_page" />
 
             <TextView
+                android:id="@+id/tv_home"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/text_color"
                 android:text="首页" />
         </LinearLayout>
 
@@ -56,6 +59,7 @@
                 android:src="@mipmap/send_package" />
 
             <TextView
+                android:id="@+id/tv_send"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="寄快递" />
@@ -77,6 +81,7 @@
                 android:src="@mipmap/express" />
 
             <TextView
+                android:id="@+id/tv_package"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="包裹" />
@@ -98,6 +103,7 @@
                 android:src="@mipmap/main"/>
 
             <TextView
+                android:id="@+id/tv_main"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="个人" />
