--- a/app/src/main/res/layout/fragment_order_send.xml
+++ b/app/src/main/res/layout/fragment_order_send.xml
@@ -168,7 +168,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:background="@null"
-                    android:hint="请选择"/>
+                    android:text="请选择"/>
 
                 <ImageView
                     android:id="@+id/img_open_option"
@@ -266,7 +266,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@null"
-                    android:hint="0"/>
+                    android:text="0"/>
 
                 <TextView
                     android:layout_width="wrap_content"
