--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,13 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorGrey">#ffffff</color>
-    <color name="home_bottom">#39acfc</color>
+    <color name="home_bottom">#ffffff</color>
     <color name="bg">#ebebeb</color>
+    <color name="mainPage">#ebebeb</color>
+    <color name="gray">#727069</color>
+    <color name="white_bg">#ffffff</color>
+    <color name="text_color">#337fe6</color>
+
     <!-- Screens background color-->
     <color name="bg_screen1">#f64c73</color>
     <color name="bg_screen2">#20d2bb</color>
