对校园快递员模块的尝试，写了一部分代码

--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -185,6 +185,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:dividerHeight="5dp"
+        android:divider="@null"
         >
     </ListView>
 
