--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="home_bottom">#ffffff</color>
     <color name="bg">#ebebeb</color>
     <color name="mainPage">#ebebeb</color>
-    <color name="gray">#727069</color>
+    <color name="gray">#ececec</color>
     <color name="white_bg">#ffffff</color>
     <color name="text_color">#337fe6</color>
 
