--- a/app/src/main/res/layout/activity_freight.xml
+++ b/app/src/main/res/layout/activity_freight.xml
@@ -13,9 +13,9 @@
             android:id="@+id/img_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/back"
             android:layout_centerVertical="true"
-            android:paddingLeft="20dp"/>
+            android:paddingLeft="20dp"
+            android:src="@mipmap/back" />
 
         <TextView
             android:layout_width="wrap_content"
